added adsense meta tag

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       name="description"
       content="Das Yogashala makes you healthy by teaching yoga from kids to senior citizens.Our Motto is to make Everyone their Health better and Life Happier.We offer FREE Demo Classes too,try it once and you wont regret for sure.Have a good day!"
     />
+    <meta name="google-adsense-account" content="ca-pub-8067164522152919">
     <title>Das Yogashala</title>
     <link
       rel="shortcut icon"
