--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8067164522152919"
       crossorigin="anonymous"
     ></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8067164522152919"
+     crossorigin="anonymous"></script>
     <script
       src="https://kit.fontawesome.com/3ddcf50394.js"
       crossorigin="anonymous"
